# MSVCColorizer

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp
src/: cmdline.cpp  cmdline.cppm  cmdline.h  compiler.h  consolecp.cpp  consolecp.cppm  consolecp.h  main.cpp  printlasterror.cpp  printlasterror.cppm  printlasterror.h  processline.cpp  processline.cppm  processline.h  std.h  syslibs.cpp  syslibs.cppm  utfconvert.cpp  utfconvert.h
